<resources>
    <string name="app_name">Proyecto_Kebabs</string>

    <!-- Comienzo de Strings de la actividad uno y la previa -->
    <string name="Presentacion">Bienvenido a la aplicación puedes realizar tu pedido, o consultar la direccion y telefono del establecimiento eligiendo uno de los dos botones</string>
    <string name="Título">Restaurante Kebabs</string>
    <string name="Ver_Mapa">Vernos en Mapa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mapa_cebanc">Map</string>
    <string name="lblLogin">Por favor, introduzca sus datos</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtDireccion">Dirección</string>
    <string name="txtTelefono">Teléfono</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnSalir">Salir</string>
    <!-- Fin de Strings de la actividad uno y la previa -->


    <!--Comienzo de  Arrays para los spiners de la actividad dos comida -->
    <string-array name="tipo_tamaño">
        <item>Seleccione un tamaño</item>
        <item>Normal (sin suplemento)</item>
        <item>Completa (+1€)</item>
    </string-array>

    <string-array name="tipo_carne">
        <item>Seleccione un tipo de carne</item>
        <item>Ternera (sin suplemento)</item>
        <item>Pollo (sin suplemento)</item>
        <item>Cordero (+1€)</item>
    </string-array>

    <string-array name="tipo_kebab">
        <item>Seleccione un tipo de kebab</item>
        <item>Döner (+3€)</item>
        <item>Dürüm (+4€)</item>
        <item>Lahmacum (+5€)</item>
        <item>Shawarma (+5€)</item>
        <item>Gyros (+5€)</item>
    </string-array>
    <!-- Fin de Arrays para los spiners de la actividad dos comida -->

    <string-array name="comida">

    </string-array>
    <!-- Comienzo de Strings de la actividad tres -->
    <string name="lblCola">Cola  2€</string>
    <string name="lblLimon">Limón  2€</string>
    <string name="lblNaranja">Naranja  2€</string>
    <string name="lblNestea">Nestea  3€</string>
    <string name="lblCerveza">Cerveza  3€</string>
    <string name="lblAgua">Agua  1€</string>
    <string name="txtCola">Cant.</string>
    <string name="txtLimon">Cant.</string>
    <string name="txtNaranja">Cant.</string>
    <string name="txtNestea">Cant.</string>
    <string name="txtCerveza">Cant.</string>
    <string name="txtAgua">Cant.</string>
    <string name="btnSiguiente3">Siguiente</string>
    <string name="btnSalir3">Salir</string>


    <!-- Fin de Strings de la actividad tres -->
    <!-- Comienzo de Strings de la actividad tres -->

    <string name="lblTituloResumen">Resumen del pedido</string>
    <string name="lblResumen"></string>
    <string name="btnAceptar">Aceptar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="title_activity_pantalla_presentacion">Map</string>

    <!-- Fin de Strings de la actividad tres -->

</resources>
