<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:background="@drawable/login">

    <TextView
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:text="@string/lblLogin"
        android:id="@+id/lblLogin"
        android:layout_weight="0.02"
        android:textColor="@android:color/white"
        android:textSize="22dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtNombre"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        android:hint="@string/txtNombre"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDireccion"
        android:layout_weight="0.02"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:hint="@string/txtDireccion"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtTelefono"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:hint="@string/txtTelefono"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSiguiente"
        android:id="@+id/btnSiguiente3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSalir"
        android:id="@+id/btnSalir"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:layout_marginTop="40dp"
        android:background="@drawable/boton" />
</LinearLayout>