<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login"
    android:weightSum="5">



    <TextView
        android:text="@string/Título"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2"
        android:id="@+id/lblTítulo"
        android:fontFamily="monospace"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:gravity="center_vertical|center_horizontal" />

    <TextView
        android:text="@string/Presentacion"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:id="@+id/lblPresentación"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:text="@string/Ver_Mapa"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/btnVerMapa"
            android:layout_weight="1"
            android:background="@drawable/boton"
            android:textColor="@android:color/black"
            android:textStyle="normal|bold"
            android:textSize="20sp" />

        <Button
            android:text="@string/btnSiguiente"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/btnSalir"
            android:layout_weight="1"
            android:background="@drawable/boton"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">



        <Button
            android:text="Mantenimiento"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/btnMantenimiento"
            android:layout_weight="1"
            android:background="@drawable/boton"
            android:textStyle="normal|bold"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>